# AI_Distro

./: .gitignore  Dockerfile  Makefile  README.md  requirements.txt
.github/workflows/: ci.yml  qa-voice.yml
configs/: agent.json  core.json  intent-map.json  kdeglobals  persona.alfred.json  persona.json  policy.json  voice.json
docs/: BOOT_ASSETS.md  CONFIGURATION.md  CONVERSATIONAL_STYLE.md  DESKTOP_UI.md  IMMUTABLE_ARCH.md  INSTALLER.md  IPC.md  ISO_BOOT.md  PROJECT_BRIEF.md  REPO_DOCUMENTATION.md  ROOTFS_BUILD.md  RUNTIME_ENV.md  TOP20_TASKS.md  VOICE_ACCEPTANCE.md  VOICE_STACK.md  VOICE_UX.md
release/: ai-distro.iso.sha256
src/rust/: Cargo.toml
src/rust/ai-distro-agent/: Cargo.toml
src/rust/ai-distro-agent/src/: audit.rs  events.rs  ipc.rs  lib.rs  main.rs  policy.rs  utils.rs
src/rust/ai-distro-agent/src/handlers/: media.rs  memory.rs  mod.rs  network.rs  package.rs  power.rs  system.rs  tools.rs  ui.rs
src/rust/ai-distro-agent/tests/: integration_test.rs
tests/: agent_voice_top20_cases.json  voice_acceptance_cases.json
tools/agent/: brain.py  calendar_google_tool.py  calendar_microsoft_tool.py  calendar_router.py  calendar_tool.py  day_planner.py  download_model.py  email_imap_tool.py  email_router.py  gmail_tool.py  google_calendar_oauth.py  google_gmail_oauth.py  intent_parser.py  microsoft_outlook_oauth.py  outlook_tool.py  provider_config.py  voice_loop.py  weather_tool.py
tools/dev/: agent-ipc-client.py  agent_voice_top20_check.py  intent_parser.py  test_calendar_microsoft_provider.py  test_intent_parser.py  test_outlook_tool.py  (+2 more)
(+66 files in other folders)
